# oh-my-claude-roles

./: .env.example  .gitignore  LICENSE  PYPI_UPLOAD.md  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pypi-publish.yml  tests.yml
roles/: ETHBlockChain.md  Python.md  TypeScript.md
roles/ai/: Prompt.md  ai-driven-fullstack-automated-dev.md
roles/frontend/: vue3.md
src/: cli.py  config.py  exceptions.py  generator.py  installer.py  logger.py  models.py  packager.py  scanner.py  validator.py
src/prompts/: __init__.py  agents.py  claude_md.py  commands.py  hooks.py  rules.py  skills.py
src/services/: __init__.py
src/services/llm/: __init__.py  factory.py  types.py
src/services/llm/generation/: __init__.py  nodes.py  utils.py  workflow.py
src/services/llm/generation/prompts/: __init__.py  agents.md  claude_md.md  commands.md  hooks.md  rules.md  skills.md
src/services/llm/role_design/: __init__.py  cli_chat.py  graph.py  nodes.py  state.py
src/services/llm/role_design/prompts/: ask_step_question.md  generate_document.md  system.md  welcome.md
tests/: test_config.py  test_exceptions.py  test_generator.py  test_generator_workflow_compat.py  test_installer.py  test_models.py  test_packager.py  test_scanner.py  test_validator.py
tests/data/: test_role.md
tests/data/test_category/: test_role_with_frontmatter.md
tests/services/llm/generation/: test_parsing.py
tests/unit/: test_generation_workflow.py  test_llm_factory.py  test_role_design_graph.py  test_role_design_state.py
