[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oh-my-claude-roles"
version = "0.1.0"
authors = []
description = "Claude Code 角色工具包管理器 - 从原始角色文档一键生成安装工具包"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "jsonschema>=4.0.0",
    "tenacity>=8.0.0",
]

[project.scripts]
oh-roles = "src.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term --cov-report=html"

[tool.coverage.run]
source = ["src"]
omit = ["*/__init__.py", "tests/*"]
